--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<video autoplay muted loop id="backVid"><source src="./vid/jellyfish-floating-blue.mp4" type="video/mp4"></video>
+<video autoplay muted loop id="backVid"><source src="./vid/jellyfish-floating-blue.mov" type="video/mp4"></video>
 
 
 <div class="topnav">
